--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,5 @@ cython_debug/
 notes.md
 .DS_Store
 qa_shellnouns_main/data/gold_data_mapped.csv
+topic_reference_detection/data/zeit_articles
+qa_shellnouns_main/data/raw_prolific_stats
